--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "usr/share/vim/vim80/bundle/Vundle.vim"]
-	path = usr/share/vim/vim80/bundle/Vundle.vim
+[submodule "bundle/Vundle.vim"]
+	path = bundle/Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim
