--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "bundle/Vundle.vim"]
-	path = bundle/Vundle.vim
+[submodule "Vundle.vim"]
+	path = Vundle.vim
 	url = https://github.com/VundleVim/Vundle.vim
